//
// Copyright 2015, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.samples.lobby.registration.seat.availability;

option (type_url_prefix) = "type.lobby.spine3.org";
option java_package="org.spine3.samples.lobby.registration.seat.availability";
option java_outer_classname = "SeatsAvailabilityEventsProto";
option java_multiple_files = true;

import "spine/annotations.proto";
import "spine/samples/lobby/common/common.proto";
import "spine/samples/lobby/registration/contracts/registration.proto";

// The event propagated when new seats are added.
message AddedAvailableSeats {
    // The added seat quantity.
    spine.samples.lobby.registration.contracts.SeatQuantity quantity = 1;
}

// The event propagated when seats are removed.
message RemovedAvailableSeats {
    // The removed seat quantity.
    spine.samples.lobby.registration.contracts.SeatQuantity quantity = 1;
}

// The event propagated when the reservation confirmation is received.
message SeatsReserved {
    // The ID of the conference.
    spine.samples.lobby.common.ConferenceId conference_id = 1;

    // The ID of the reservation.
    spine.samples.lobby.common.ReservationId reservation_id = 2;

    // The collection of reserved seats quantity items which were updated.
    repeated spine.samples.lobby.registration.contracts.SeatQuantity reserved_seat_updated = 3;

    // The collection of available seat quantity items which were updated.
    repeated spine.samples.lobby.registration.contracts.SeatQuantity available_seat_updated = 4;
}

// The event propagated when the payment for the reservation is received and the reservation is committed.
message SeatsReservationCommitted {
    // The ID of the reservation.
    spine.samples.lobby.common.ReservationId reservation_id = 1;
}

// The event propagated when the seats reservation is cancelled.
message SeatsReservationCancelled {
    // The ID of the reservation.
    spine.samples.lobby.common.ReservationId reservation_id = 1;

    // The conference id the seats reservation associated with.
    spine.samples.lobby.common.ConferenceId conference_id = 2;

    // The collection of available seat quantity items which were updated.
    repeated spine.samples.lobby.registration.contracts.SeatQuantity available_seat_updated = 3;
}
